--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Responsive Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./portfoliostyle.css">
-  <script src="portfolioscript.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
 </head>
 
 <body>
@@ -52,13 +52,13 @@
               font-size: 32px; 
               font-weight: bold; 
             }
-          </style>
+          </style>  
           <h6>WEB DEVELOPER</h6>
           <input type="button" value="My Work" class="bt1 mt-5">
           <input type="button" value="Hire ME" class="bt2 mt-5">
         </div>
         <div class="col-lg-6 py-5">
-          <img src="image.png" alt="svg image" class="img-fluid" width="800px" >
+          <img src="./image/image.png" alt="svg image" class="img-fluid" width="800px" >
         </div>
       </div>
     </div>
